Chat app example + socket js

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#server.servlet.context-path=/api
 
+spring.datasource.url = jdbc:mysql://hexle.myddns.me:3306/
+spring.datasource.username = boxhit_io_user_db
+spring.datasource.password = 3dWi?z217asdkfnj438hasdjfl
+
+spring.jpa.database=default
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+server.port = 8449
+#server.ssl.key-store = classpath:springbootTEST.p12
+#server.ssl.key-store = classpath:springbootIONOS.p12
+#server.ssl.key-store = classpath:wso2carbon.jks
+#server.ssl.key-store-password = password
+#server.ssl.key-store-type = pkcs12
+#server.ssl.key-store-type = jks
+#server.ssl.key-password = password
+#server.ssl.enabled = true
+
+#security.basic.enable = false
+#security.ignored=/**
