--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.servlet.context-path=/api
 
-spring.datasource.url = jdbc:mysql://hexle.myddns.me:3306/
+spring.datasource.url = jdbc:mysql://hexle.myddns.me:3306/boxhit_io
 spring.datasource.username = boxhit_io_user_db
 spring.datasource.password = 3dWi?z217asdkfnj438hasdjfl
 
@@ -8,6 +8,7 @@ spring.jpa.database=default
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 server.port = 8449
 #server.ssl.key-store = classpath:springbootTEST.p12
